--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -9,7 +9,7 @@
             <th/>
         </tr>
         </thead>
-		{{#each students}}
+		{{#each studentSubmissions}}
 			<tbody class="usersubmission">
 			<tr class="userinfo">
 				<td>{{this.student.firstName}}</td>
