--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -4,15 +4,20 @@
         {{#embed "files/file-upload" }}{{/embed}}
 
       {{#if submission}}
+        <form class="form submissionForm" method="post" action="/homework/submit/{{submission._id}}">
         <input name="submissionId" type="hidden" data-force-value="true" value="{{submission._id}}"/>
-        <form class="form" method="post" action="/homework/submit/{{submission._id}}">
       {{else}}
-        <form class="form" method="post" action="/homework/submit">
+        <form class="form submissionForm" method="post" action="/homework/submit">
       {{/if}}
-      
+        
+          {{#if submission}}
+            {{#embed "homework/components/submission_uploaded_files" deletionAllowed=true}}{{/embed}}
+            <hr>
+          {{/if}}
+          
           {{#if teamSubmissions}}
             <div class="form-group">
-                <label>Teammitglieder</label>
+                <label>Teammitglieder (maximal {{maxCoWorkers}} Personen)</label>
                 <select name="coWorkers" id="coWorkers" multiple="" data-placeholder="Teammitglieder auswählen">
                     {{#each students}}
                         <option value="{{this._id}}" {{#if @root.submission}}{{#inArray this._id @root.submission.coWorkers}}selected{{/inArray}}{{/if}}>{{this.firstName}} {{this.lastName}}</option>
@@ -27,8 +32,6 @@
           {{#if submission}}
             <input type="hidden" name="_method" data-force-value="true" value="patch"/>
             <input name="homeworkId" type="hidden" data-force-value="true" value="{{_id}}"/>
-            {{#embed "homework/components/submission_uploaded_files" deletionAllowed=true}}{{/embed}}
-            <hr>
             <div class="form-group">
                 <textarea id="evaluation" name="comment" class="form-control customckeditor"
                           placeholder="Erstelle deine Abgabe...">{{submission.comment}}</textarea>
