--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -128,7 +128,7 @@
 
                     {{#unless isStudent}}
                     <div class="form-group">
-                        <div class="row {{#unless assignment.teamSubmissions}}hidden-xl-down{{/unless}}">
+                        <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>
@@ -137,10 +137,10 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class="col-md-6" id="teamsize">
+                            <div class="col-md-6 {{#unless assignment.teamSubmissions}}hidden-xl-down{{/unless}}" id="teamsize">
                                 <div class="form-group">
                                     <label>maximale Teamgröße:</label>
-                                    <input class="form-control" name="maxCoWorkers" id="maxCoWorkers" type="number" min="0" placeholder="5" value="{{assignment.maxCoWorkers}}"/>
+                                    <input class="form-control" name="maxCoWorkers" id="maxCoWorkers" type="number" min="2" placeholder="5" value="{{assignment.maxCoWorkers}}"/>
                                 </div>
                             </div>
                         </div>
