hint for teachers

--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -139,7 +139,7 @@
                             </div>
                             <div class="col-md-6 {{#unless assignment.teamSubmissions}}hidden-xl-down{{/unless}}" id="teamsize">
                                 <div class="form-group">
-                                    <label>maximale Teamgröße:</label>
+                                    <label>maximale Teamgröße (min 2):</label>
                                     <input class="form-control" name="maxCoWorkers" id="maxCoWorkers" type="number" min="2" placeholder="5" value="{{assignment.maxCoWorkers}}"/>
                                 </div>
                             </div>
