--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -1,4 +1,4 @@
-{{#content "styles" mode="append"}}>
+{{#content "styles" mode="append"}}
     <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
 {{/content}}
 {{#content "scripts" mode="append"}}
