Use secondary buttons by default

--- a/static/styles/dashboard/dashboard.scss
+++ b/static/styles/dashboard/dashboard.scss
@@ -44,7 +44,7 @@
 .section{
     clear: both;
 }
-.more.btn.btn-primary {
+.more.btn.btn-primary, .more.btn.btn-secondary {
     width: 100%;
     margin-left: 0 !important;
 }
