--- a/views/dashboard/components/card_template.hbs
+++ b/views/dashboard/components/card_template.hbs
@@ -30,7 +30,7 @@
                             {{/if}}
                         {{/each}}
                     </div>
-                <a class="btn btn-primary {{#if this.actions}}ml-1{{/if}} more" href="{{url}}" rel="canonical">{{{link-text}}}</a>
+                <a class="btn btn-secondary {{#if this.actions}}ml-1{{/if}} more" href="{{url}}" rel="canonical">{{{link-text}}}</a>
             </div>
         </div>
     </article>
