Teamgröße nur anzeigen, wenn gesetzt

--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -17,7 +17,7 @@
           
           {{#if teamSubmissions}}
             <div class="form-group">
-                <label>Teammitglieder (maximal <span id="maxCoWorkers">{{maxCoWorkers}}</span> Personen)</label>
+                <label>Teammitglieder {{#if maxCoWorkers}}(maximal <span id="maxCoWorkers">{{@root.maxCoWorkers}}</span> Personen){{/if}}</label>
                 <select name="coWorkers" id="coWorkers" multiple="" data-placeholder="Teammitglieder auswählen">
                     {{#each students}}
                         <option value="{{this._id}}" {{#if @root.submission}}{{#inArray this._id @root.submission.coWorkers}}selected{{/inArray}}{{/if}}>{{this.firstName}} {{this.lastName}}</option>
