--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -5,15 +5,16 @@ body {
     background: white !important;
 }
 aside.nav-sidebar {
-    color: #727272;
+    color: #fff;
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     width: 240px;
+    font-weight: 400;
     margin-top: 0;
     margin-bottom: 0;
-    background-color: #c3c1c1;
+    background-image:url('/images/testbg.png');
     z-index: 100;
     float: left;
 
@@ -29,7 +30,6 @@ aside.nav-sidebar {
     .sc-branding {
         padding: 15px;
         font-size: 25px;
-        background: $colorHPIRed;
         color: whitesmoke;
         @include media-breakpoint-down(md) {
             padding: 10px;
@@ -40,7 +40,7 @@ aside.nav-sidebar {
             height: 30px;
             margin-bottom: -5px;
             margin-right: 0.25rem;
-            background: url("../../images/logo/cloud-transparent-mono.svg") no-repeat center;
+            background: url("/images/logo/cloud-transparent-mono.svg") no-repeat center;
             background-size: contain;
             @include media-breakpoint-down(md) {
                 width: 100%;
@@ -92,16 +92,15 @@ aside.nav-sidebar {
                 a {
                     width: 100%;
                     float: left;
-                    height: 60px;
-                    line-height: 60px;
-                    border-bottom: 1px solid #adadad;
-                    color: #727272;
+                    height: 50px;
+                    line-height: 50px;
+                    color: #fff;
                     padding: 0px 20px;
                     font-size: 14px;
                     text-decoration: none;
 
                     &.child-active {
-                        background-color: #dbd7d7;
+                        background-color: #rgba(255,255,255,0.80);
                         border-bottom: 1px solid transparent;
                     }
 
@@ -136,7 +135,7 @@ aside.nav-sidebar {
                     }
 
                     &.active {
-                        background: #fff;
+                        background: rgba(255,255,255,0.80);
                         color: $colorHPIRed;
                         border-bottom: 1px solid transparent;
                     }
@@ -159,7 +158,7 @@ aside.nav-sidebar {
                     span {
                         display: inline-block;
                         text-transform: uppercase;
-                        font-weight: bold;
+                        font-weight: 400;
                         text-decoration: none;
 
                         @include media-breakpoint-down(md) {
