--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -1,5 +1,6 @@
 @import "./colors";
 @import "components";
+@import "./sc-theme";
 
 @import "./tether/tether.min.css";
 @import "./bootstrap/scss/bootstrap-flex";
