--- a/views/administration/administration.hbs
+++ b/views/administration/administration.hbs
@@ -2,5 +2,6 @@
     {{#content "scripts" mode="append"}}
         <script src="/scripts/administration.js" type="text/javascript" defer></script>
         <script src="/scripts/coursesTimes.js" type="text/javascript" defer></script>
+        <script src="/scripts/tables.js" type="text/javascript" defer></script>
     {{/content}}
 {{/extend}}
