add delete form

--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -50,6 +50,12 @@
                     {{/content}}
                 {{/embed}}
 
+                {{#embed "lib/components/modal-form" body=body method="delete" class="delete-modal"}}
+                    {{#content "fields"}}
+                        {{> "administration/forms/form-delete-user"}}
+                    {{/content}}
+                {{/embed}}
+
             </section>
         </div>
     {{/content}}
