--- a/views/administration/systems.hbs
+++ b/views/administration/systems.hbs
@@ -32,6 +32,12 @@
                     {{/content}}
                 {{/embed}}
 
+                {{#embed "lib/components/modal-form" body=body method="delete" class="delete-modal"}}
+                    {{#content "fields"}}
+                        {{> "administration/forms/form-delete-alias"}}
+                    {{/content}}
+                {{/embed}}
+
             </section>
         </div>
     {{/content}}
