--- a/views/administration/courses.hbs
+++ b/views/administration/courses.hbs
@@ -35,6 +35,12 @@
                     {{/content}}
                 {{/embed}}
 
+                {{#embed "lib/components/modal-form" body=body method="delete" class="delete-modal"}}
+                    {{#content "fields"}}
+                        {{> "administration/forms/form-delete-name"}}
+                    {{/content}}
+                {{/embed}}
+
             </section>
         </div>
     {{/content}}
