list submissions by teams if teamsubmission & bugfixes

--- a/static/styles/homework/submissions.scss
+++ b/static/styles/homework/submissions.scss
@@ -25,6 +25,10 @@
         content: ")";
       }
     }
+    .teamMembers span:not(:last-child):after{
+        display: inline;
+        content:",";
+    }
   }
   .usersubmission {
     border-top: 1px solid rgba(0, 0, 0, 0.125);
