--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -14,14 +14,13 @@
             {{#embed "homework/components/submission_uploaded_files" deletionAllowed=true}}{{/embed}}
             <hr>
           {{/if}}
-          
           {{#if teamSubmissions}}
             <div class="form-group">
                 <label>Teammitglieder {{#if maxCoWorkers}}(maximal <span id="maxCoWorkers">{{@root.maxCoWorkers}}</span> Personen){{/if}}</label>
                 <select name="coWorkers" id="coWorkers" multiple="" data-placeholder="Teammitglieder auswählen">
                     {{#each students}}
                         <option value="{{this._id}}" 
-                            {{#if @root.submission}}{{#inArray this._id @root.submission.coWorkers}}selected {{/inArray}}{{/if}}
+                            {{#if @root.submission}}{{#inArray this._id @root.submission.coWorkerIds}}selected {{/inArray}}{{/if}}
                             {{#ifeq this._id @root.currentUser._id}}selected disabled{{/ifeq}}
                         >{{this.firstName}} {{this.lastName}}</option>
                     {{else}}
