inform teacher about students without submissions

--- a/static/styles/homework/submissions.scss
+++ b/static/styles/homework/submissions.scss
@@ -25,10 +25,6 @@
         content: ")";
       }
     }
-    .teamMembers span:not(:last-child):after{
-        display: inline;
-        content:",";
-    }
   }
   .usersubmission {
     border-top: 1px solid rgba(0, 0, 0, 0.125);
@@ -80,7 +76,10 @@
       background: transparent;
     }
   }
-
+  .groupNames span:not(:last-child):after{
+    display: inline;
+    content:",";
+  }
 }
 
 .section-evaluation {
