sc-card bugfixing & sidebar background fallback

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -15,6 +15,7 @@ aside.nav-sidebar {
     margin-top: 0;
     margin-bottom: 0;
     background-image:url('/images/testbg.png');
+    background-color: #b91f4d;
     z-index: 100;
     float: left;
 
