--- a/views/dashboard/components/card_template.hbs
+++ b/views/dashboard/components/card_template.hbs
@@ -1,5 +1,5 @@
 <div class="col-lg-4 col-md-6 col-sm-12">
-    <article class="card sc-card">
+    <article class="sc-card">
         <div class="sc-card-header" {{#if this.background}}style="background:{{this.background}};"{{/if}}>
             <span class="sc-card-title">{{this.title}}</span>
             
