--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -40,7 +40,9 @@
         {{/if}}
 
     {{#if submittable}}
+        {{#userHasPermission "HOMEWORK_CREATE"}}
         <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
+        {{/userHasPermission}}
     {{/if}}
     </form>
     </div>
