--- a/static/styles/lib/sc-theme.scss
+++ b/static/styles/lib/sc-theme.scss
@@ -8,7 +8,6 @@
     height: 100%;
     margin: 0;
     border-radius: 2px;
-    border: 1px solid rgba(0,0,0,.125);
     .sc-card-header {
         display: flex;
         flex-direction: row;
@@ -56,11 +55,28 @@
         margin: 0;
         flex: 1 1 0;
         width: 100%;
+        border: 1px solid rgba(0,0,0,.125);
+        border-top-width: 0;
+        border-bottom-width: 0;
+        &:first-of-type{
+            border-top-left-radius: 2px;
+            border-top-right-radius: 2px;
+            border-top-width: 1px;
+        }
+        &:last-of-type{
+            border-bottom-left-radius: 2px;
+            border-bottom-right-radius: 2px;
+            border-bottom-width: 1px;
+        }
     }
     .sc-card-footer {
         flex: 0 1 0;
         width: 100%;
         padding: .5rem;
+        border: 1px solid rgba(0,0,0,.125);
+        border-top-width: 0;
+        border-bottom-left-radius: 2px;
+        border-bottom-right-radius: 2px;
         a, button {
             float:right;
             color: $colorHPIRed;
@@ -76,7 +92,6 @@
             line-height: 36px;
             &:hover {
                 background-color: #eee;
-                font-weight: 700;
             }
         }
     }
