--- a/views/dashboard/components/card_section.hbs
+++ b/views/dashboard/components/card_section.hbs
@@ -5,7 +5,9 @@
         </div>
         <div class="row tasks card-deck-row">
             {{#each content}}
-                {{> 'dashboard/components/card_template' link-text=../link-text}}
+                <div class="sc-card-wrapper col-xl-3 col-lg-4 col-md-6 col-sm-12">
+                    {{> 'dashboard/components/card_template' link-text=../link-text}}
+                </div>
             {{else}}
                 <div class="col-md-8 offset-md-2 col-lg-12 offset-lg-0">
                     <div class="alert alert-info">
