Content fix tags text overflow (#462)
* fix tags & text overflow

* keep round corners

--- a/static/styles/content/content.scss
+++ b/static/styles/content/content.scss
@@ -64,7 +64,15 @@ h1, h3 {
     margin-bottom: 10px;
 }
 .card-tags {
+    overflow: hidden;
+    text-overflow: ellipsis;
     margin-bottom: 10px;
+}
+.tag {
+    max-width: 100%;
+}
+.card-text {
+    word-wrap: break-word;
 }
 .tooltip-inner {
   color: white ;
