--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -36,10 +36,10 @@
             <nav>
                 <ul class="sidebar-list">
                     <li>
-                        <div class="sc-branding">
+                        <a class="sc-branding" href="/">
                             <div class="cloud-logo"></div>
                             <span>Schul-Cloud</span>
-                        </div>
+                        </a>
                     </li>
                     {{#each sidebarItems}}
                         <li>
