users can't select labels or elements with .noselect

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -56,6 +56,11 @@ label {
 	width: 100%;
 }
 
+label,
+.noselect{
+    user-select: none;
+}
+
 .btn-loading {
 	font-size: 0px !important;
 	transition: width 0.3s;
