--- a/views/dashboard/components/card_section.hbs
+++ b/views/dashboard/components/card_section.hbs
@@ -6,7 +6,7 @@
         <div class="row tasks card-deck-row">
             {{#each content}}
                 <div class="sc-card-wrapper col-xl-3 col-lg-4 col-md-6 col-sm-12">
-                    {{> 'dashboard/components/card_template' link-text=../link-text}}
+                    {{> 'lib/components/sc-card' link-text=../link-text}}
                 </div>
             {{else}}
                 <div class="col-md-8 offset-md-2 col-lg-12 offset-lg-0">
