--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -42,8 +42,7 @@
             right: 8px;
             top: 8px;
             font-size: 0;
-            opacity: .5;
-            a, button {
+            .sc-card-menu-action {
                 display: inline-block;
                 width: 32px;
                 height: 32px;
@@ -57,9 +56,23 @@
                 vertical-align: middle;
                 line-height: 32px;
                 overflow: hidden;
+                opacity: .5;
                 &:hover {
-                    background: rgba(0,0,0,.5);
+                    background: rgba(0,0,0,.2);
                 }
+            }
+            .sc-card-menu-info {
+                display: inline-block;
+                padding: 0;
+                margin: 0;
+                color: #fff;
+                font-size: 14px;
+                overflow: hidden;
+            }
+        }
+        &:hover{
+            .sc-card-menu-action{
+                opacity: 1;
             }
         }
     }
