--- a/views/dashboard/components/card_section.hbs
+++ b/views/dashboard/components/card_section.hbs
@@ -10,8 +10,8 @@
                 </div>
             {{else}}
                 <div class="col-md-8 offset-md-2 col-lg-12 offset-lg-0">
-                    <div class="alert alert-info">
-                        <strong>Info!</strong> Keine Einträge vorhanden.
+                    <div class="alert">
+                        Keine aktuellen Einträge vorhanden.
                     </div>
                 </div>
             {{/each}}
