--- a/views/lib/components/sc-card.hbs
+++ b/views/lib/components/sc-card.hbs
@@ -1,11 +1,16 @@
 <article class="sc-card">
     <div class="sc-card-header" {{#if this.background}}style="background:{{this.background}};"{{/if}}>
-        <span class="sc-card-title">{{this.title}}</span>
+        <span class="sc-card-title">
+        {{this.title}}
+            {{#if this.secondaryTitle}}
+                <small class="d-block">{{{this.secondaryTitle}}}</small>
+            {{/if}}
+        </span>
         
         <div class="sc-card-menu">
             {{#each this.actions}}
                 {{#if this.method}}
-                        <a class="{{this.class}}"
+                        <a class="sc-card-menu-action {{this.class}}"
                            href="{{this.link}}"
                            target="_blank"
                            data-method="delete-material"
@@ -14,17 +19,18 @@
                             <i class="fa fa-{{this.icon}}"></i>
                         </a>
                 {{else}}
-                    <a class="{{this.class}}" href="{{this.link}}" alt="'{{../../title}}' {{this.alt}}.">
+                    <a class="sc-card-menu-action {{this.class}}" href="{{this.link}}" alt="'{{../../title}}' {{this.alt}}.">
                         <i class="fa fa-{{this.icon}}"></i>
                     </a>
+                {{/if}}
+            {{else}}
+                {{#if this.menuInfo}}
+                    <small class="sc-card-menu-info">{{{this.menuInfo}}}</small>
                 {{/if}}
             {{/each}}
         </div>
     </div>
     <div class="sc-card-body ckcontent">
-        <div class="pull-right pl-1">
-            <small class="text-muted">{{{this.date}}}</small>
-        </div>
         {{{truncateHTML (conflictFreeHtml this.content)}}}
     </div>
     <div class="sc-card-footer">
