Added pagination to the content page, if queries respond to much results

--- a/views/content/search-results.hbs
+++ b/views/content/search-results.hbs
@@ -30,6 +30,9 @@
                     {{/with}}
                 {{/each}}
             </div>
+            <div class="row">
+                {{> "lib/components/pagination" settings=pagination }}
+            </div>
 
         </section>
 
