--- a/views/classes/overview.hbs
+++ b/views/classes/overview.hbs
@@ -10,49 +10,47 @@
 
     {{#content "page"}}
         <section class="section-classes">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="row results card-deck-row">
-                        {{#each classes}}
-                            {{#each this}}
-                                <div class="col-md-4 col-sm-6 col-xs-12">
-                                    <div class="card h-100">
-                                        <div class="card-block">
-                                            <h4 class="card-title">
-                                                {{this.name}}
-                                            </h4>
-                                            <div class="content">
-                                                {{#userHasPermission "COURSE_EDIT"}}
-                                                    <div class="row">
-                                                        <a class="btn-edit"
-                                                           href="/classes/{{../_id}}"
-                                                           target="_blank"
-                                                           alt="Löschen der Klasse: '{{../name}}'.">
-                                                            <i class="fa fa-edit"></i>
-                                                        </a>
-                                                        <a
-                                                           href="/classes/{{../_id}}"
-                                                           target="_blank"
-                                                           data-method="delete-material"
-                                                           data-name="{{../name}}"
-                                                           alt="Löschen der Klasse: '{{../name}}'.">
-                                                            <i class="fa fa-trash-o"></i>
-                                                        </a>
-                                                    </div>
-                                                {{/userHasPermission}}
-                                            </div>
+            <div>
+                <div class="row results card-deck-row">
+                    {{#each classes}}
+                        {{#each this}}
+                            <div class="col-md-4 col-sm-6 col-xs-12">
+                                <div class="card h-100">
+                                    <div class="card-block">
+                                        <h4 class="card-title">
+                                            {{this.name}}
+                                        </h4>
+                                        <div class="content">
+                                            {{#userHasPermission "COURSE_EDIT"}}
+                                                <div class="row">
+                                                    <a class="btn-edit"
+                                                       href="/classes/{{../_id}}"
+                                                       target="_blank"
+                                                       alt="Löschen der Klasse: '{{../name}}'.">
+                                                        <i class="fa fa-edit"></i>
+                                                    </a>
+                                                    <a
+                                                       href="/classes/{{../_id}}"
+                                                       target="_blank"
+                                                       data-method="delete-material"
+                                                       data-name="{{../name}}"
+                                                       alt="Löschen der Klasse: '{{../name}}'.">
+                                                        <i class="fa fa-trash-o"></i>
+                                                    </a>
+                                                </div>
+                                            {{/userHasPermission}}
                                         </div>
                                     </div>
                                 </div>
-                            {{/each}}
-                        {{else}}
-                            <div class="col-xs-12">
-                                <p class="text-muted text-center">
-                                    <span>Keine Klassen.</span>
-                                </p>
                             </div>
                         {{/each}}
-                    </div>
+                    {{else}}
+                        <div class="col-xs-12">
+                            <p class="text-muted text-center">
+                                <span>Keine Klassen.</span>
+                            </p>
+                        </div>
+                    {{/each}}
                 </div>
 
                 {{#userHasPermission "COURSE_EDIT"}}
